azurek8s/azure-india-mf-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: india-mf-deployment
  labels:
    app: india-mf-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: india_mutual_fund
  template:
    metadata:
      labels:
        app: india_mutual_fund
    spec:
      containers:
      - name: indiamutualfunds
        image: indiamfs.azurecr.io/mf:latest
        ports:
        - containerPort: 8501
