azurek8s/azure-india-mf-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: india-mf-service
  labels:
    app: india_mutual_fund
spec:
  # comment or delete the following line if you want to use a LoadBalancer
  type: NodePort 
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  # type: LoadBalancer
  ports:
  - port: 8501
  selector:
    app: india_mutual_fund
