azurek8s/azure-india-mf-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: india-mf-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 8501
